[gd_scene load_steps=11 format=2]

[ext_resource path="res://actors/environments/Gate.gd" type="Script" id=1]
[ext_resource path="res://utils/Shadow.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sprites/signs/arrow.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/environments/ring_part.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/environments/ring_full.png" type="Texture" id=5]
[ext_resource path="res://assets/audio/FX/392693__screamstudio__sci-fi-sfx.wav" type="AudioStream" id=6]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 250, 500 )

[sub_resource type="Animation" id=2]
resource_name = "Blink"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("RingPart:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Color( 1.6, 1.6, 1.6, 1 ), Color( 1.2, 1.2, 1.2, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RingPart:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1.2, 1.2, 1.2, 1 ) ]
}

[node name="Gate" type="Area2D" groups=["gates"]]
collision_layer = 0
collision_mask = 513
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="BottomRingPart" type="Sprite" parent="."]
modulate = Color( 0.388235, 0.388235, 0.388235, 1 )
self_modulate = Color( 0.521569, 0.701961, 1, 1 )
position = Vector2( 27, 0 )
texture = ExtResource( 4 )
flip_h = true

[node name="Arrow" type="Sprite" parent="."]
modulate = Color( 0.133333, 0.666667, 1, 0.313726 )
position = Vector2( -61, 0 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 3 )
flip_h = true

[node name="RingPart" type="Sprite" parent="."]
modulate = Color( 1.2, 1.2, 1.2, 1 )
self_modulate = Color( 0.521569, 0.701961, 1, 1 )
position = Vector2( -28, 0 )
z_index = 12
z_as_relative = false
texture = ExtResource( 4 )

[node name="Shadow" parent="." instance=ExtResource( 2 )]
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Blink = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="RandomAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource( 8 )
streams = [ ExtResource( 6 ) ]
volume_min = 0
volume_max = 0
randomize_pitch = true
pitch_min = 1
pitch_max = 1.4
